adding tests, changing settings call, adding security setting
Signed-off-by: Jeremy Dupras <jdupras@amazon.com>